--- a/B13/vidu-1/views/index.pug
+++ b/B13/vidu-1/views/index.pug
@@ -1,7 +1,10 @@
 html
   head
     title= title
+    link(rel="stylesheet", href="/css/style.css")
   body
     h1= massage
 
     img(src="/image/image1.jpg", alt="")
+
+    script(src="/js/script.js") 
